--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "url": "git+https://github.com/Prefect-Team/cerberus-front.git"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
     "@types/eth-sig-util": "^2.1.1",
     "@walletconnect/client": "^1.7.8",
     "@walletconnect/qrcode-modal": "^1.7.8",
@@ -31,11 +32,14 @@
     "ethereumjs-util": "^7.0.6",
     "ethers": "^5.0.17",
     "node-gyp": "^8.1.0",
+    "node-sass": "4.14.1",
     "prop-types": "^15.7.2",
     "qr-image": "^3.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts-ts": "^4.0.8",
+    "sass": "^1.53.0",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
@@ -50,6 +54,7 @@
     "@types/qr-image": "^3.2.3",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.3",
     "@typescript-eslint/eslint-plugin": "^2.20.0",
     "@typescript-eslint/parser": "^2.20.0",
@@ -62,7 +67,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "prettier": "^1.19.1",
-    "typescript": "^3.7.4",
+    "typescript": "^3.7.4"
   },
   "eslintConfig": {
     "extends": "react-app"
