--- a/.eslintrc
+++ b/.eslintrc
@@ -9,14 +9,14 @@
     "@typescript-eslint/no-var-requires": ["off"],
     "@typescript-eslint/no-use-before-define": ["off"],
     "@typescript-eslint/no-unused-vars": ["off"],
-    "comma-dangle": ["error", "always-multiline"],
+    "comma-dangle": ["error", "only-multiline"],
     "no-async-promise-executor": ["off"],
     "no-empty-pattern": ["off"],
     "no-undef": ["error"],
     "no-var": ["error"],
     "object-curly-spacing": ["error", "always"],
     "quotes": ["error", "double", { "allowTemplateLiterals": true }],
-    "semi": ["error", "always"],
+    "semi": ["error", "never"],
     "spaced-comment": ["off"],
     "no-prototype-builtins": ["off"],
     "sort-keys": ["off"],
